# Nemo-Skills

./: .gitignore  CONTRIBUTING.md  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
core/: README.md  pyproject.toml  requirements.txt
dockerfiles/: Dockerfile.nemo-skills
docs/basics/: index.md  installation.md
docs/evaluation/: code.md  custom-benchmarks.md  external-benchmarks.md  index.md  multilingual.md  speculative-decoding.md
nemo_skills/: _cli_stub.py
nemo_skills/dataset/: prepare.py  utils.py
nemo_skills/dataset/aai/: __init__.py
nemo_skills/dataset/aalcr/: __init__.py
nemo_skills/dataset/aime26/: __init__.py  prepare.py
nemo_skills/dataset/answer-judge/: __init__.py
nemo_skills/dataset/apex-shortlist/: __init__.py
nemo_skills/dataset/arena-hard-v2/: __init__.py
nemo_skills/dataset/asr-leaderboard/: __init__.py
nemo_skills/dataset/audiobench/: __init__.py
nemo_skills/dataset/beyond-aime/: __init__.py
nemo_skills/dataset/bfcl_v3/: __init__.py  prepare.py
nemo_skills/dataset/bfcl_v4/: __init__.py
nemo_skills/dataset/bigcodebench/: __init__.py
nemo_skills/dataset/birdbench/: __init__.py
nemo_skills/dataset/compute-eval/: __init__.py
nemo_skills/dataset/critpt/: __init__.py  prepare.py
nemo_skills/dataset/flores200/: __init__.py
nemo_skills/dataset/frontierscience-olympiad/: __init__.py
nemo_skills/dataset/gpqa/: __init__.py
nemo_skills/dataset/gsm-plus/: __init__.py
nemo_skills/dataset/hle/: __init__.py
nemo_skills/dataset/human-eval/: __init__.py
nemo_skills/dataset/human-eval-infilling/: __init__.py
nemo_skills/dataset/icpc/: __init__.py
nemo_skills/dataset/ifbench/: __init__.py
nemo_skills/dataset/ifeval/: __init__.py
nemo_skills/dataset/imo-answerbench/: __init__.py
nemo_skills/dataset/imo-gradingbench/: __init__.py
nemo_skills/dataset/imo-proofbench/: __init__.py
nemo_skills/dataset/ioi/: __init__.py
nemo_skills/dataset/librispeech-pc/: __init__.py
nemo_skills/dataset/livebench-coding/: __init__.py
nemo_skills/dataset/livecodebench/: __init__.py
nemo_skills/dataset/livecodebench-cpp/: __init__.py
nemo_skills/dataset/livecodebench-pro/: __init__.py
nemo_skills/dataset/mbpp/: __init__.py
nemo_skills/dataset/minif2f/: __init__.py
nemo_skills/dataset/mmau-pro/: __init__.py
nemo_skills/dataset/mmlu/: __init__.py
nemo_skills/dataset/mmlu-pro/: __init__.py
nemo_skills/dataset/mmlu-prox/: __init__.py
nemo_skills/dataset/mmlu-redux/: __init__.py
nemo_skills/dataset/mmmu-pro/: __init__.py
nemo_skills/dataset/mobench/: __init__.py
nemo_skills/dataset/mrcr/: __init__.py
nemo_skills/dataset/musan/: __init__.py
nemo_skills/dataset/omni-math/: __init__.py
nemo_skills/dataset/omniscience/: __init__.py
nemo_skills/dataset/proof-bench-judge/: __init__.py
nemo_skills/dataset/proofnet/: __init__.py
nemo_skills/dataset/putnam-bench/: __init__.py
nemo_skills/dataset/ruler2/: __init__.py
nemo_skills/dataset/scicode/: __init__.py
nemo_skills/dataset/simpleqa/: __init__.py
nemo_skills/dataset/speed-bench/: __init__.py  prepare.py
nemo_skills/dataset/supergpqa/: __init__.py
nemo_skills/dataset/swe-bench/: __init__.py
nemo_skills/dataset/swe-bench-multilingual/: __init__.py
nemo_skills/dataset/swe-rebench/: __init__.py
nemo_skills/dataset/wmt24pp/: __init__.py
nemo_skills/evaluation/evaluator/: __init__.py  critpt.py  specdec.py
nemo_skills/evaluation/metrics/: base.py  compute_metrics.py  critpt_metrics.py  map_metrics.py  specdec_metrics.py
nemo_skills/inference/: autoformalize.py  check_contamination.py  generate.py  prover.py
nemo_skills/inference/eval/: arena_judge.py  bfcl.py  compute_eval.py  critpt.py  scicode.py  specdec.py  swebench.py
nemo_skills/inference/model/: audio_utils.py  openai.py  utils.py  vllm_multimodal.py
nemo_skills/inference/server/: serve_sglang.py  serve_vllm.py
nemo_skills/mcp/: utils.py
nemo_skills/pipeline/: cli.py  dataset.py  eval.py  prepare_data.py  start_server.py  summarize_results.py
nemo_skills/pipeline/judges/: __init__.py  comet_judge.py  nvembed_judge.py
nemo_skills/prompt/: utils.py
recipes/asr_tts/: riva_generate.py
requirements/: audio.txt  common-tests.txt  core.txt  pipeline.txt
tests/: test_configs.py  test_datasets.py  test_default_args.py  test_dependency_isolation.py  test_external_benchmarks.py  test_generation.py  test_nvidia_inference_api.py  test_prompts.py  test_vllm_audio.py
tests/gpu-tests/: run_qwen.sh  test_eval.py  test_external_benchmark_eval.py
(+27 files in other folders)
