# Copyright (c) 2024, NVIDIA CORPORATION.  All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = [
    "version",
    "dependencies",
    "optional-dependencies",
]

name = "nemo_skills"
description = "NeMo Skills - a project to improve skills of LLMs"
readme = "README.md"
# license-files = ["LICENSE"]  # causing problems in nemo-aligner container
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[project.urls]
homepage = "https://nvidia-nemo.github.io/Skills"
source = "https://github.com/NVIDIA-NeMo/Skills"
issues = "https://github.com/NVIDIA-NeMo/Skills/issues"

[project.scripts]
ns = "nemo_skills.pipeline.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.dynamic]
version = { attr = "nemo_skills.version.__version__" }
dependencies = {file = ["core/requirements.txt", "requirements/pipeline.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
# Core: lightweight runtime only (inference, evaluation, tool calling)
core = { file = ["core/requirements.txt"] }
# Pipeline: orchestration, cluster management, CLI (adds nemo_run, typer, wandb)
pipeline = { file = ["requirements/pipeline.txt"] }
# Dev: development and testing tools
dev = { file = ["requirements/common-tests.txt", "requirements/common-dev.txt"] }

[tool.pytest.ini_options]
markers = [
    "gpu: tests that require a GPU to run",
]
addopts = "--ignore=tests/slurm-tests -W ignore::DeprecationWarning -W ignore::PendingDeprecationWarning"

[tool.ruff]
target-version = "py310"
line-length = 119

[tool.ruff.lint]
## See https://docs.astral.sh/ruff/formatter/#sorting-imports.
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"nemo_skills/utils.py" = ["F401"]
"nemo_skills/pipeline/cli.py" = ["F401"]
